<resources>
    <string name="title_tally_level_1">1 Level Tally</string>
    <string name="title_tally_level_2">2 Level Tally</string>
    <string name="title_tally_level_3">3 Level Tally</string>
    <string name="title_tally_level_4">4 Level Tally</string>
    <string name="title_tally_score">Tally Score</string>
    <string name="title_tally_level">Level</string>
    <string name="title_rmi_report">RMI report</string>
    <string name="summary">Summary</string>
    <string name="title_sub_criteria">Criteria</string>
    <string name="title_total">Total</string>
    <string name="title_level">Level</string>
    <string name="title_standard">Standard</string>
</resources>
